# Daikin-Rotex-HPSU-CAN-Seriell

./: .gitignore  README.en.md  README.md
.github/workflows/: build.yml
.github/workflows/resources/: external_components_dev.yaml
.github/workflows/src/: extract_external_components_block.py  patch_full_yaml.sh
Automations/: send_to_Rotex.yaml
components/daikin_rotex_can/: BidiMap.cpp  __init__.py  accessor.h  bidi_map.cpp  bidi_map.h  buttons.cpp  buttons.h  daikin_rotex_can.cpp  daikin_rotex_can.h  entity.cpp  entity.h  entity_manager.cpp  entity_manager.h  persistent_value.h  pid.cpp  pid.h  scheduler.cpp  scheduler.h  sensors.cpp  sensors.h  translations.h  types.h  utils.cpp  utils.h
components/daikin_rotex_can/translations/: de.py  en.py  fr.py  it.py  translate.py
entities/: README.md
examples/: full.yaml  full_de.yaml  full_en.yaml  full_fr.yaml  full_it.yaml  minimal.yaml  options.yaml
faq/: README.md
manuals/de/: Fachmann Code.docx  Fachmann_Code  Fachmann_Code.txt
scripts/: README.md
templates/: Adaptive_Heizkurve.yaml  Berechnung COP.yaml
test/: CMakeLists.txt  README.md  mock_esphome.cpp
test/src/: test_bidi_map.cpp  test_pid.cpp  test_scheduler.cpp  test_utils.cpp
